btsync (1.1.82.1-3) unstable; urgency=low

  - The native upstream components from BitTorrent Inc. are no more
    included. All packages are now dependant upon the external
    package btsync-common which contains the btsync executables and
    documentation (Closes #18) (Closes #19)
  - Fixed: frontend was not be stopped on update in btsync-user
    (Closes #20)
  - Fixed: handling of update and remove of btsync-user is now
    working as expected (Closes #22)
  - Added German translation to debconf templates (Closes #23)
  - Added Italian translation to debconf templates contributed
    by Leo Moll and Andrea Pennelli (Closes #24)
  - Added French translation to debconf templates contributed
    by Quentin Scouflaire (Closes #25)
  - Added Russian translation to debconf templates contributed
    by dimitriy5181 (Closes #27)
  - Added Dutch translation to debconf templates contributed
    by Andras Kiss (Closes #28)
  - Added Hungarian translation to debconf templates contributed
    by Andras Kiss (Closes #29)

 -- Leo Moll <leo.moll@yeasoft.com>  Tue, 15 Oct 2013 18:10:38 +0200

btsync (1.1.82-2) unstable; urgency=low

  - Fixed: Package fails to build on native arm builder (Closes #15)
  - Fixed: missing config file prevented btsyncindicator to
    start on fresh installations of btsync-user (Closes #14)
  - Fixed: btsync --help does not show all available commands
    in package btsync-user (Closes #13)
  - Fixed: manpage btsync.7 was not installed in btsync-user (Closes #11)

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 13 Oct 2013 17:32:26 +0200

btsync (1.1.82-1) unstable; urgency=low

  * New upstream release 1.1.82 of btsync
  * New upstream release 0.10 of btsyncindicator
  - Fixed: missing dependency to python-appindicator in btsync-user
    (Closes #7)
  - Added possibility to suspend/pause the btsync-agent in
    btsync-user (Closes #8)
  - Added a unique managing command in btsync-user (Closes #9)